<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mi_battery_stats"
          android:title="@string/battery_title"
          android:icon="@drawable/ic_action_chart"
          app:showAsAction="always|withText"/>

    <item
        android:id="@+id/mi_battery_menu"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/battery_menu"
        app:showAsAction="always|withText">

        <menu>

            <item android:id="@+id/mi_power_stats"
                  android:title="@string/power_title"
                  android:icon="@drawable/ic_action_chart"
                  app:showAsAction="never"/>

            <item
                android:id="@+id/mi_show_carinfo"
                android:icon="@drawable/ic_action_about"
                android:title="@string/lb_vehicle_info"
                app:showAsAction="never"/>

            <item
                android:id="@+id/mi_aux_battery_stats"
                android:icon="@drawable/ic_action_chart"
                android:title="@string/aux_battery_menulabel"
                app:showAsAction="never"/>

            <item
                android:id="@+id/mi_show_features"
                android:icon="@drawable/ic_action_control"
                android:title="@string/Features"
                app:showAsAction="never"/>

            <item
                android:id="@+id/mi_globaloptions"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/Options"
                app:showAsAction="never"/>

            <item android:id="@+id/mi_cellular_usage"
                  android:title="@string/lb_cellular_usage"
                  android:icon="@drawable/ic_action_chart"
                  app:showAsAction="never"/>

            <item
                android:id="@+id/mi_app_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/mi_app_about"
                app:showAsAction="never"/>

        </menu>

    </item>

</menu>