<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_get_data"
        android:icon="@drawable/ic_refresh"
        android:title="@string/battery_btn_get_data"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/battery_menu"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/battery_menu"
        app:showAsAction="always|withText">

        <menu>

            <item
                android:id="@+id/mi_reset_view"
                android:icon="@drawable/ic_my_location"
                android:title="@string/battery_btn_reset_view"
                app:showAsAction="ifRoom"/>

            <group android:checkableBehavior="all">

                <item
                    android:id="@+id/mi_chk_volt"
                    android:title="@string/battery_chk_volt"
                    app:showAsAction="ifRoom"/>

                <item
                    android:id="@+id/mi_chk_temp"
                    android:title="@string/battery_chk_temp"
                    app:showAsAction="ifRoom"/>

            </group>

            <item
                android:id="@+id/mi_help"
                android:icon="@drawable/ic_help"
                android:title="@string/battery_btn_help"
                app:showAsAction="never"/>

        </menu>
    </item>

</menu>
