<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:fitsSystemWindows="true"
	android:padding="16dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:scrollbars="vertical">

		<EditText
			android:id="@+id/txt_vehicle_id"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:hint="@string/lb_vehicle_id"
			android:inputType="textNoSuggestions|textCapCharacters">

			<requestFocus />
		</EditText>

		<EditText
			android:id="@+id/txt_vehicle_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/lb_vehicle_label"
			android:inputType="textCapWords" />

		<EditText
			android:id="@+id/txt_server_passwd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/lb_server_passwd"
			android:inputType="textPassword" />

		<EditText
			android:id="@+id/txt_module_passwd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/lb_module_passwd"
			android:inputType="textPassword" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:text="@string/lb_select_server" />

		<Spinner
			android:id="@+id/select_server"
			style="@style/Widget.AppCompat.Spinner.Underlined"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_column="1"
			android:background="@drawable/spinner_ab_focused_ovms"
			android:entries="@array/select_server_options" />

		<EditText
			android:id="@+id/txt_server_address"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:ems="10"
			android:hint="@string/ServerNameOrIP"
			android:inputType="text"
			android:text="" />

		<EditText
			android:id="@+id/txt_gcm_senderid"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="8dp"
			android:ems="10"
			android:hint="@string/GcmSenderID"
			android:inputType="number" />

		<CheckBox
			android:id="@+id/chk_tls_enabled"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/lb_tls_enabled" />

		<CheckBox
			android:id="@+id/chk_tls_trust_all"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:text="@string/lb_tls_trust_all" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:text="@string/lb_slide_choice_vehicle" />

		<Gallery
			android:id="@+id/ga_car"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:spacing="20dp" />
	</LinearLayout>
</ScrollView>