<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mi_map_options"
          app:showAsAction="ifRoom|withText"
          android:icon="@drawable/ic_more_vert"
          android:title="@string/mi_map_options">

        <menu>

            <group android:checkableBehavior="all">

                <item android:id="@+id/mi_map_autotrack"
                      app:showAsAction="never"
                      android:title="@string/mi_map_autotrack"/>

                <item android:id="@+id/mi_map_filter_connections"
                      app:showAsAction="never"
                      android:title="@string/mi_map_filter_connections"/>

                <item android:id="@+id/mi_map_filter_range"
                      app:showAsAction="never"
                      android:title="@string/mi_map_filter_range"/>

            </group>

            <item android:id="@+id/mi_map_settings"
                  app:showAsAction="never"
                  android:title="@string/mi_map_settings"/>

        </menu>

    </item>

</menu>
