<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:ovms="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:gravity="center_horizontal"
            android:textSize="60px"
            android:textStyle="bold"
            android:text="@string/lb_booster_hour"/>

        <com.openvehicles.OVMS.ui.witdet.SlideNumericView
            android:layout_marginBottom="10dp"
            android:id="@+id/booster_time_hour"
            android:layout_width="220dp"
            ovms:min="0"
            ovms:max="23"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="60dp"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:gravity="center_horizontal"
            android:textSize="60px"
            android:textStyle="bold"
            android:text="@string/lb_booster_min"/>

        <com.openvehicles.OVMS.ui.witdet.SlideNumericView
            android:layout_marginBottom="10dp"
            android:id="@+id/booster_time_min"
            android:layout_width="220dp"
            ovms:min="0"
            ovms:max="59"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="60dp"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:gravity="center"
            android:textSize="60px"
            android:textStyle="bold"
            android:text="@string/lb_booster_doubler"/>

        <com.openvehicles.OVMS.ui.witdet.SwitcherView
            android:id="@+id/booster_SwitcherView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:entries="@array/lb_booster_mode"
            />

    </LinearLayout>

</FrameLayout>

